# SearchEngine

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: converter.h  index.h  search.h
src/: CMakeLists.txt  converter.cpp  index.cpp  main.cpp  search.cpp
tests/: CMakeLists.txt  index_tests.cpp  search_tests.cpp
